--- a/modules/party_birth_data/locale/fr.po
+++ b/modules/party_birth_data/locale/fr.po
@@ -17,3 +17,9 @@ msgstr "Code postal de naissance"
 msgctxt "field:party.party,birth_zip_and_city:"
 msgid "Birth Zip and Birth City"
 msgstr "Commune de naissance"
+
+msgctxt "model:ir.message,text:msg_invalid_ssn_insee_code"
+msgid "SSN invalide: code Insee invalide."
+msgstr ""
+"Les chiffres 6 à 10 du NIR ne correspondent pas avec le code insee de la "
+"commune de naissance."
