--- a/modules/party_ssn/doc/fr/CHANGELOG
+++ b/modules/party_ssn/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12428 Ajout de Vérification du NIR avec les informations de la personne
 Version 2.4 - 2019-04-12
 * BUG#10981 Correction d'une erreur lors de l'anonymisation d'un tiers
 * BUG#10131 Autoriser les numéros SSN qui ne commencent pas par 1 ou 2
