document_request: Update states, use list-form view (#3119)
Initial problem was fixing the states based on data_status,
however this led to another problem regarding extra_data
initialization from an editable list view (which did not
work at all).

So included is an update to use list-form views for document
request lines, which offers a convenient alternative.

Fix #12630

--- a/modules/document_request/doc/en/CHANGELOG
+++ b/modules/document_request/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12630 Only check data_status if the document description requires it
 * BUG#12530 Use data_status to compute 'received' field
 * FEA#11908 Add comment field on document request
 * BUG#11602 Enable document request creation from list view
