--- a/modules/document_request/doc/fr/CHANGELOG
+++ b/modules/document_request/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12630 Prise en compte du statut des données uniquement si le type de document le nécessite
 * BUG#12530 Vérification du statut des données lors de la vérification de la réception
 * FEA#11908 Ajouter un champ commentaire à la demande de document
 * BUG#11602 Permettre la création de demandes de documents depuis une vue liste
