--- a/modules/claim_indemnification/doc/en/CHANGELOG
+++ b/modules/claim_indemnification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Fix typo following merge
 * BUG#11431 When payback method is immediate on an unpaid cancelled indemnification, all payment lines linked to indemnifications of the related claim should be blocked
 * BUG#11266 Separate initial deductible creation from service initialization
 * OTH#00000 Fix crash when trying to validate an indemnification
