--- a/modules/claim_indemnification/doc/fr/CHANGELOG
+++ b/modules/claim_indemnification/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Correction d'une typo suite au merge tryton
 * BUG#11431 Lorsque la méthode de régularisation d'une indemnisation annulée non payée est immédiate, toutes les lignes de paiement de l'ensemble des indemnisations sur le même sinistre devraient être bloquées
 * BUG#11266 Séparation de la création de la première période de franchise de l'initialisation de la prestation
 * OTH#00000 Correction d'un crash lorsqu'on essaie de valider une indemnisation
