offered_life_clause: Fix API describe_product when no default beneficiary define (#3125)

--- a/modules/offered_life_clause/doc/en/CHANGELOG
+++ b/modules/offered_life_clause/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+OTH#0000 Fix API describe_product when no default beneficiary define
 OTH#0000 Add default in label in order to improve user understanding
 
 Version 2.4 - 2019-04-12
