contract_insurance_invoice: Add a threshold for per_invoice fees (#3122)
Fix #12531

--- a/modules/premium/locale/fr.po
+++ b/modules/premium/locale/fr.po
@@ -54,6 +54,14 @@ msgctxt "field:account.fee,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:account.fee,invoice_amount_threshold:"
+msgid "Invoice Amount Threshold"
+msgstr "Seuil du montant de la facture"
+
+msgctxt "help:account.fee,invoice_amount_threshold:"
+msgid "If set, the fee will not be applied if the total amount of the associated invoice exceeds it"
+msgstr "Si renseigné, le frais ne sera pas appliqué si le montant total de la quittance associée est supérieur"
+
 msgctxt "field:account.fee,name:"
 msgid "Name"
 msgstr "Nom"
@@ -532,7 +540,7 @@ msgstr "Nom"
 
 msgctxt "field:offered.product.premium_date,rule:"
 msgid "Premium Date Rule"
-msgstr ""
+msgstr "Règle de date de prime"
 
 msgctxt "field:offered.product.premium_date,rule_extra_data:"
 msgid "Rule Extra Data"
@@ -611,10 +619,12 @@ msgid "Display Contract Premium"
 msgstr "Afficher les primes du contrat"
 
 msgctxt "model:ir.message,text:msg_multiple_premium_at_same_date"
-msgid "Only one premium not null at date %(date) can be saved. Check your "
-"rating rule: only one rate must be defined for a date"
-msgstr "Seulement une seule prime non nulles peut être sauvegarder à la date "
-"du %(date). Vérifier vos règles de tarifications : un seul tarif doit être "
+msgid ""
+"Only one premium not null at date %(date) can be saved. Check your rating "
+"rule: only one rate must be defined for a date"
+msgstr ""
+"Seulement une seule prime non nulles peut être sauvegarder à la date du "
+"%(date). Vérifier vos règles de tarifications : un seul tarif doit être "
 "définie à une date"
 
 msgctxt "model:ir.message,text:msg_no_contract_found"
