--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12531 Add a threshold for per_invoice fees
 * BUG#12474 invoice_to_end_date must not crash if contract has no end date
 * OTH#00000 Automatically set bank account on billing information when setting payer
 * OTH#00000 Fix payment process method getter
