contract_insurance_document_request: add document_request_lines per covered element (#3102)
Fix #12064

--- a/modules/contract_insurance_document_request/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_document_request/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12064 Les lignes de documents requis peuvent désormais porter sur un élément couvert
+
 Version 2.4 - 2019-04-12
 * BUG#10264 Possibilité d'ajouter des lignes de documents requis pour les devis
 
