--- a/modules/contract_insurance_document_request/doc/en/CHANGELOG
+++ b/modules/contract_insurance_document_request/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12064 The document request lines can now target a covered element
+
 Version 2.4 - 2019-04-12
 * BUG#10264 Enable adding new document request lines on quotes
 
