--- a/modules/contract/doc/fr/CHANGELOG
+++ b/modules/contract/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12470 Gestion de la souscription par formule dans les APIs
 * BUG#12556 Numéro de devis non définit lors d'une souscription via API V1
 * FEA#11970 Ajout de l'API de souscription de contrat
 * BUG#12036 Prendre en compte le statut de contrat de type devis dans le calcul de is_active_at_date pour activer le contrat
