--- a/modules/api/doc/en/CHANGELOG
+++ b/modules/api/doc/en/CHANGELOG
@@ -1,2 +1,3 @@
+* OTH#00000 Properly rollback transaction in case of late error
 * OTH#00000 Fix tests following json schema updates
 * FEA#10924 Add a framework for adding business APIs
