--- a/modules/api/doc/fr/CHANGELOG
+++ b/modules/api/doc/fr/CHANGELOG
@@ -1,2 +1,3 @@
+* OTH#00000 Rollback de la transaction explicite dans le cas d'erreurs tardives
 * OTH#00000 Correction des tests suite à la mise à jour des schemas
 * FEA#10924 Ajout d'une structure permettant de gérer des APIs métier
