endorsement_party: fix address endorsement party intialization (#3136)
Fix #00000

--- a/modules/endorsement_party/doc/en/CHANGELOG
+++ b/modules/endorsement_party/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#00000 Fix address endorsement party initalization
 * BUG#12466 Fix address endorsement view
 * FEA#12225 Add "Change Party Social Security Number" endorsement in default configuration
 * FEA#12151 Add start endorsement button in toolbar on party (like for contract)
