--- a/modules/migrator_party/doc/fr/CHANGELOG
+++ b/modules/migrator_party/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#12485 Améliorer le batch de migration des contacts afin de ne plus créer les lignes de contacts en doublons dans le cas où on a plusieurs type de contacts pour le même tiers
+
 Version 2.4 - 2019-04-12
 * OTH#00000 Correctif migration des lignes d'adresse
 * BUG#10806 Retirer la dépendence au module party_ssn
