document_request: add document request lines APIs (#3134)
https://support.coopengo.com/issues/12341

--- a/modules/contract_insurance_document_request/locale/fr.po
+++ b/modules/contract_insurance_document_request/locale/fr.po
@@ -14,6 +14,10 @@ msgctxt "field:contract,document_request_lines:"
 msgid "Documents"
 msgstr "Documents"
 
+msgctxt "field:contract,document_token:"
+msgid "Document Token"
+msgstr "Jeton de document"
+
 msgctxt "field:contract,hidden_waiting_request_lines:"
 msgid "Hidden Waiting Request Lines"
 msgstr "Demandes de documents cachés en attente"
@@ -21,6 +25,10 @@ msgstr "Demandes de documents cachés en attente"
 msgctxt "field:contract,hidden_waiting_requests:"
 msgid "Hidden waiting requests"
 msgstr "Documents requis cachés"
+
+msgctxt "field:contract.covered_element,document_token:"
+msgid "Document Token"
+msgstr "Jeton de document"
 
 msgctxt "field:document.reception,contract:"
 msgid "Contract"
@@ -149,6 +157,18 @@ msgstr "Règles de gestion des documents"
 msgctxt "field:offered.product,document_rules:"
 msgid "Document Rules"
 msgstr "Règles de gestion des documents"
+
+msgctxt "help:contract,document_token:"
+msgid "This token allows to retrieve document requests linked to the holder"
+msgstr ""
+"Ce jeton permet de retrouver les demandes de documents liés au porteur du "
+"jeton."
+
+msgctxt "help:contract.covered_element,document_token:"
+msgid "This token allows to retrieve document requests linked to the holder"
+msgstr ""
+"Ce jeton permet de retrouver les demandes de documents liés au porteur du "
+"jeton."
 
 msgctxt "help:document.request.line,details:"
 msgid "Add details about the received document"
