--- a/modules/document_request/locale/fr.po
+++ b/modules/document_request/locale/fr.po
@@ -10,6 +10,10 @@ msgctxt "field:document.description,extra_data_def:"
 msgid "Extra Data"
 msgstr "Données Complémentaires"
 
+msgctxt "field:document.description,prerequisite:"
+msgid "Prerequisite"
+msgstr "Prérequis"
+
 msgctxt "field:document.description,reception_requires_attachment:"
 msgid "Reception Requires Attachment"
 msgstr "La réception requiert la pièce jointe"
@@ -282,6 +286,14 @@ msgctxt "field:ir.attachment,status_change_date:"
 msgid "Status Change Date"
 msgstr "Date de changement de statut"
 
+msgctxt "help:document.description,prerequisite:"
+msgid ""
+"The documents of this kind are a prerequisite for receiving any other kind "
+"of documents. Only used for frontend applications."
+msgstr ""
+"Les documents de ce type sont des prérequis pour recevoir n'impote quelle "
+"autre type de documents. Utilisé uniquement pour les applications front-end."
+
 msgctxt "help:document.description,reception_requires_attachment:"
 msgid ""
 "If checked, the attachments will be required to mark the document request "
@@ -333,6 +345,10 @@ msgstr "Ligne de demande de documents"
 msgctxt "model:document.request.process,name:"
 msgid "Document Request Batch Definition"
 msgstr "Définition du batch de demande de documents"
+
+msgctxt "model:event.type,name:document_token_generation"
+msgid "Document Token Generation"
+msgstr "Génération de jeton de documents"
 
 msgctxt "model:event.type,name:remind_documents"
 msgid "Remind Documents"
@@ -405,6 +421,10 @@ msgstr "Lignes"
 msgctxt "view:document.request.line:"
 msgid "Confirm"
 msgstr "Confirmer"
+
+msgctxt "view:document.request.line:"
+msgid "Details"
+msgstr "Commentaire"
 
 msgctxt "view:document.request:"
 msgid "Send Request"
