questionnaire: add package to questionnaire rule result schema (#3140)
Fix #12674

--- a/modules/questionnaire/locale/fr.po
+++ b/modules/questionnaire/locale/fr.po
@@ -605,6 +605,7 @@ msgid ""
 "- score: integer between 0-100, the computed recommandation for this proposition\n"
 "- description: a string which will be used to describe the proposition\n"
 "- product: the code of the suggested product\n"
+"- package: (optional) the code of the suggested package\n"
 "- eligible: whether the product will be selectable or not for subscription"
 msgstr ""
 "Retourne une liste de dictionnaires, avec les clés suivantes :\n"
@@ -612,6 +613,7 @@ msgstr ""
 "- score : Un entier entre 0 et 100, le score attribué à cette proposition\n"
 "- description : Un texte qui sera utilisé pour décrire la proposition\n"
 "- product : Le code du produit proposé\n"
+"- formule : (optionnel) Le code de la formule proposée\n"
 "- eligible : Si le produit sélectionné sera souscriptible"
 
 msgctxt "help:questionnaire.part,sequence:"
@@ -688,6 +690,10 @@ msgstr "Non Sélectionné"
 msgctxt "model:ir.message,text:msg_nothing_selected"
 msgid "A choice must be made before going on"
 msgstr "Un choix doit être fait pour pouvoir continuer"
+
+msgctxt "model:ir.message,text:msg_package"
+msgid "Package"
+msgstr "Formule"
 
 msgctxt "model:ir.message,text:msg_product"
 msgid "Product"
