--- a/modules/questionnaire/doc/en/CHANGELOG
+++ b/modules/questionnaire/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12674 The questionnaire rule result can also include the package code
 * OTH#00000 Questionnaire is required in questionnaire wizard
 * BUG#12267 Questionnaire answers are readonly in questionnaire wizard
 * OTH#00000 Fix subscription process start date initialization from questionnaire wizard
