rule_engine: Fix using error in a rule used by another (#3058)
Fix #12447

--- a/modules/rule_engine/doc/fr/CHANGELOG
+++ b/modules/rule_engine/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12447 Premettre d'utiliser les erreurs dans une règle utilisée par une autre sans que cela génère d'erreur technique
 * BUG#10976 Création automatique d'un warning name unique lors d'ajout des warning dans le moteur de règle
 * OTH#00000 Mise à jour de l'appel à execute dans ws_execute_rule
 * OTH#00000 Ajout d'outillage de tests pour les noeuds du moteur de règles
