contract_coverage_amount: Add rule for predefined list of coverage amount (#3149)
Fix #12708

--- a/modules/contract_coverage_amount/doc/en/CHANGELOG
+++ b/modules/contract_coverage_amount/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12708 Add default coverage amount rule based on predefined list
 * FEA#12260 Manage coverage amount in subscription APIs
 * FEA#11626 Add default coverage amount rule based on amount range 
 
