--- a/modules/endorsement_party/doc/fr/CHANGELOG
+++ b/modules/endorsement_party/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12709 Ne pas créer d'objet avenant de tiers si l'avenant ne le requiert pas.
 * BUG#00000 Corriger l'initialisation des tiers
 * BUG#12466 Corriger l'écran d'avenant d'adresse
 * FEA#12225 Ajout de l'avenant "Modifier le numéro de sécurité sociale" à la configuration par défaut
