--- a/modules/bank_fr/doc/en/CHANGELOG
+++ b/modules/bank_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12730 Handle Banque de France external files
 * OTH#00000 Fix bank loader: handle case same BIC is redundant in banks file
 * BUG#12296 Export get bank from iban api
 * FEA#11795 Load banks and agencies from Banque de France files
