document_request_electronic_signature: Make signature configuration exportable (#3159)

--- a/modules/document_request_electronic_signature/doc/en/CHANGELOG
+++ b/modules/document_request_electronic_signature/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Make signature configuration exportable
 * FEA#12321 Allow to customize electronic signature settings based on model desc
 * BUG#12198 Add more information in context when generating a document to find a signer for the electronic signature in some cases
 * BUG#11679 Crash when generating a document requesting electronic signature
