--- a/modules/party_employment/doc/fr/CHANGELOG
+++ b/modules/party_employment/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12535 Mettre à jour l'API pour gérer les informations sur l'emploi
 * FEA#12056 Ajout des données de précompte
 * OTH#00000 Ajout des données profesionnelles dans le moteur de règles
 * FEA#11598 Création du module. Ce module permet la gestion des données profesionnelles.
