--- a/modules/contract_noemie/doc/en/CHANGELOG
+++ b/modules/contract_noemie/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12749 Allow marking a product for noemisation
 * BUG#12370 Fix Noemie dates
 * FEA#11778 Fix Noemie status management for endorsements
 * FEA#11778 Add test
