--- a/modules/contract_noemie/doc/fr/CHANGELOG
+++ b/modules/contract_noemie/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12749 Autoriser le marquage pour noémisation sur les produits
 * BUG#12370 Fix Noemie dates
 * FEA#11778 Fix Noemie status management for endorsements
 * FEA#11778 Ajout test
