--- a/modules/contract_noemie/locale/fr.po
+++ b/modules/contract_noemie/locale/fr.po
@@ -34,6 +34,10 @@ msgctxt "field:offered.item.description,is_noemie:"
 msgid "Is Noemie Person"
 msgstr "Gestion de la noémisation"
 
+msgctxt "field:offered.product,is_noemie:"
+msgid "Is Noemie Product"
+msgstr "Gestion de la noémisation"
+
 msgctxt "help:offered.item.description,is_noemie:"
 msgid ""
 "If True, covered elements using this item descriptor will have noemie "
@@ -41,6 +45,14 @@ msgid ""
 msgstr ""
 "Si vrai, les risques couverts utilisant ce descripteur auront des "
 "informations noémie liées  "
+
+msgctxt "help:offered.product,is_noemie:"
+msgid ""
+"If true, all covered elements for contracts using this product will have "
+"noemie related information"
+msgstr ""
+"Si vrai, tous les risques couverts des contrats utilisant ce produit auront "
+"des informations Noémie"
 
 msgctxt "model:contract.noemie.flow.batch,name:"
 msgid "Contract Noemie Flow Batch"
