analytic_coog: Fix crash and improve analytic rule view (#3164)

--- a/modules/analytic_coog/doc/en/CHANGELOG
+++ b/modules/analytic_coog/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+OTH#00000 Fix crash when saving analytic rule without account defined
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 * FEA#9939 Initialize analytic account pattern according to its type
