account_payment_sepa_cog: fix sepa files and sepa chain (#3137)
Fix #00000

--- a/modules/account_payment_sepa_cog/doc/en/CHANGELOG
+++ b/modules/account_payment_sepa_cog/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Fix sepa files adresses and remittance tags
+* OTH#00000 Fix payment_working_days chain : missing do_sepa_message
 * FEA#12319 Allow to customize sepa remittance information
 * BUG#12460 Fix sepa batches (files can not be dumped)
 * OTH#00000 Fix some french translations
