contract_noemie: Update Noemie flow file treatment (#3172)
Fix #12766

--- a/modules/contract_noemie/doc/en/CHANGELOG
+++ b/modules/contract_noemie/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12766 Noemie flow file update and batch adjustment
 * FEA#12749 Allow marking a product for noemisation
 * BUG#12370 Fix Noemie dates
 * FEA#11778 Fix Noemie status management for endorsements
