--- a/modules/contract_noemie/doc/fr/CHANGELOG
+++ b/modules/contract_noemie/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12766 Mise à jour du flux Noemie et du batch en conséquent
 * FEA#12749 Autoriser le marquage pour noémisation sur les produits
 * BUG#12370 Fix Noemie dates
 * FEA#11778 Fix Noemie status management for endorsements
