contract_insurance: Fix/merge 52 extra premium (#3167)
Fix #12757

--- a/modules/contract_insurance/doc/en/CHANGELOG
+++ b/modules/contract_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12757 Prevent crash when creating extra premiums / exclusions
 * FEA#12497 Manage custom exclusions
 * BUG#11891 Fix crash when launching 'manage option' from a covered element
 * BUG#11141 Make the selection of optional coverage at contract level in manage options wizard possible
