--- a/modules/contract_insurance/doc/fr/CHANGELOG
+++ b/modules/contract_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12757 Correctif du crash lors de création des surprimes / exclusions
 * FEA#12497 Gestion d'exclusions libres
 * BUG#11891 Correction d'un crash lors de l'exécution de l'assistant 'Gestion des options' depuis un élément couvert.
 * BUG#11141 Gérer la sélection des couvertures optionnelles au niveau contrat dans l'assistant de gestion des options
