--- a/modules/claim_prest_ij_service/doc/en/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/en/CHANGELOG
@@ -1,5 +1,6 @@
 * BUG#12546 Fix batch to wait until all files in the transaction are successfully processed before archiving it
 * OTH#00000 Translate Mandate identification to RUM
+* BUG#12706 Handle properly subsidiaries as covered elements and affiliations in the prest ij batch processing
 * BUG#11890 Cancel fix on conditions of automatic subscription
 * BUG#11890 Fix conditions of automatic subscription when there is deductible period
 * BUG#11917 Fix display of subscriptions where there is only one (regression from 11724 )
