contract_underwriting: Add underwriting reception API (#3143)
Fix #12685

--- a/modules/contract_underwriting/doc/en/CHANGELOG
+++ b/modules/contract_underwriting/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12685 Add underwriting reception API
 * FEA#12326 Allow to add medical notes only visible to a specific group during underwriting
 
 Version 2.4 - 2019-04-12
