--- a/modules/contract_underwriting/doc/fr/CHANGELOG
+++ b/modules/contract_underwriting/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12685 Ajout d'une api de saisie de résultat d'analyse de risque
 * FEA#12326 Possibilité de saisir des notes durant le processus d'analyse de risque et seulement visible par la bulle médicale
 
 Version 2.4 - 2019-04-12
