--- a/modules/claim_almerys/doc/fr/CHANGELOG
+++ b/modules/claim_almerys/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Quelques améliorations de la chaîne de batch et de la gestion de fichiers
 * OTH#00000 Ajout de la chaîne de batch de décomptes Almerys
 * FEA#12006: Filtrage des statements uniquement pour les claims HTP
 * FEA#12006: Ajout de tests
