--- a/modules/party_birth_data/locale/fr.po
+++ b/modules/party_birth_data/locale/fr.po
@@ -2,6 +2,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "field:offered.item.description,birth_zip_required:"
+msgid "Birth zip required"
+msgstr "Commune de naissance requis"
+
 msgctxt "field:party.party,birth_city:"
 msgid "Birth City"
 msgstr "Ville de naissance"
@@ -18,8 +22,16 @@ msgctxt "field:party.party,birth_zip_and_city:"
 msgid "Birth Zip and Birth City"
 msgstr "Commune de naissance"
 
+msgctxt "help:offered.item.description,birth_zip_required:"
+msgid "If set to True, birth zip and city will be required"
+msgstr "Si défini à Vrai, la commune de naissance sera requis"
+
+msgctxt "model:ir.message,text:msg_birth_zip_required"
+msgid "Birth zip required for this insured person %(rec_name)s"
+msgstr "La commune de naissance est requis pour l'assuré %(rec_name)s"
+
 msgctxt "model:ir.message,text:msg_invalid_ssn_insee_code"
-msgid "SSN invalide: code Insee invalide."
+msgid "Invalid ssn: invalid insee code."
 msgstr ""
 "Les chiffres 6 à 10 du NIR ne correspondent pas avec le code insee de la "
 "commune de naissance."
