contract_waiver_premium: Fix account domain in waiver coverage (#3182)

--- a/modules/contract_waiver_premium/doc/en/CHANGELOG
+++ b/modules/contract_waiver_premium/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Fix account selection in waiver coverage configuration following 5.2 tryton merge
 * BUG#11528 Fix on waiver of premium's amount computation and handle taxes with reverse compute
 
 Version 2.4 - 2019-04-12
