contract_insurance_invoice: add api for b2b upload of documents (#3177)
Fix #12749

--- a/modules/contract_insurance_document_request/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_document_request/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12764 Ajout d'une API pour téléverser des documents vers un contrat
 * FEA#12064 Les lignes de documents requis peuvent désormais porter sur un élément couvert
 
 Version 2.4 - 2019-04-12
