--- a/modules/contract_insurance_document_request/doc/en/CHANGELOG
+++ b/modules/contract_insurance_document_request/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12764 Add an API to upload documents to a contract
 * FEA#12064 The document request lines can now target a covered element
 
 Version 2.4 - 2019-04-12
