--- a/modules/claim_health/doc/en/CHANGELOG
+++ b/modules/claim_health/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Getter of default claim bank account should never return an instance
+
 Version 2.4 - 2019-04-12
 * BUG#10683 Default claim bank account is the contract's billing information direct debit account if it exists, otherwise it is one of the subscriber's active account, contrary to before where it was the opposite.
 
