--- a/modules/claim_health/doc/fr/CHANGELOG
+++ b/modules/claim_health/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Le getter du compte bancaire par défaut pour les sinistres ne doit jamais retourner une instance
+
 Version 2.4 - 2019-04-12
 * BUG#10683 Le compte de remboursement de sinistres est le compte de prélèvement du mode de quittancement du contrat s'il existe, sinon c'est l'un des comptes actifs du souscripteur, contrairement à avant où c'était l'opposé.
 
